# Phytium

./: .gitignore  Makefile  PROJECT_INFO.md  README.md  radar_log_20260527_132326.csv  wave_decode_packet.c  底层架构与通信摸底报告.md
.recallloom/: config.json  context_brief.md  (+3 more)
Phytium_UKF_Distributed_State_Estimation/: CMakeLists.txt
Phytium_UKF_Distributed_State_Estimation/GD32L233C_Prj/: GD32L233C_Prj.uvoptx
Phytium_UKF_Distributed_State_Estimation/GPIO/: readme.txt
Phytium_UKF_Distributed_State_Estimation/Phytium_UKF_Distributed_State_Estimation/: .gitignore  README.md
Phytium_UKF_Distributed_State_Estimation/config/: config.json  openamp.service
Phytium_UKF_Distributed_State_Estimation/dashboard_board/: .gitignore  README.md
Phytium_UKF_Distributed_State_Estimation/demo/: sensor_receiver
Phytium_UKF_Distributed_State_Estimation/docs/: architecture.md  communication-flow.md  transplant-gd32-to-phytium.md
Phytium_UKF_Distributed_State_Estimation/firmware/: openamp_core0.elf
Phytium_UKF_Distributed_State_Estimation/freertos/: main.c  openamp_for_linux.config  trace_wave.txt
Phytium_UKF_Distributed_State_Estimation/multi_node/: finite_stubs.c  shm_direct.h
Phytium_UKF_Distributed_State_Estimation/scripts/: deploy.sh  deploy_and_start.sh  test-led.sh
Phytium_UKF_Distributed_State_Estimation/state_estimation/: .gitignore  risk_assessment.py
Phytium_UKF_Distributed_State_Estimation/state_new/: RK4.py  dynamic_system.py  initialize_system.py  run_all.py  terminal_node.py  ukf_estimation.py
Phytium_UKF_Distributed_State_Estimation/tests/: lora_dump.c
(+708 files in other folders)
